[package]
name = "minecraft_connector"
version = "0.1.0"
authors = ["Oli Legg <oliglegg@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.64"
